@@ -1,9 +1,11 @@
 setMethod("calls", "SnpSet", function(object) assayData(object)$call)
 setReplaceMethod("calls", signature(object="SnpSet", value="matrix"), function(object, value) assayDataElementReplace(object, "call", value))
-setMethod("confs", "SnpSet", function(object) {
-	X <- assayData(object)$callProbability
-	P <- 1-exp(-X/1000)
-	return(P)
+setMethod("confs", "SnpSet", function(object, transform=TRUE) {
+  X <- assayData(object)$callProbability
+  if (transform){
+    X <- 1-exp(-X/1000)
+  }
+  return(X)
 })
 setReplaceMethod("confs", signature(object="SnpSet", value="matrix"),
 		 function(object, value){
